tests/ast_interpreter/err_float_arg_count.expected
<string>:2:11: error: function float expects 1 argument, but 0 were provided
    print(float());
          ^^^^^^^
